[Grid] Add inline end and block end padding to grid area overflow rect https://bugs.webkit.org/show_bug.cgi?id=260299 rdar://113985683

Reviewed by Alan Baradlay.

In 281594@main we started considering the grid area when computing the
overflow rect of a grid. We also need to expand the rect covered by the
grid area to include the inline end and block end padding.

We do this in some form already in RenderBlock::computeOverflow but that
is done by creating a rect from the children of the renderer and adding
the appropriate padding.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderGrid.cpp:
(WebCore::RenderGrid::computeOverflow):

Canonical link: https://commits.webkit.org/282384@main